# polars-profiling

./: .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report_form.yaml  feature_request_form.yaml
.github/workflows/: pages.yml  publish-pypi.yml  tests.yml
examples/bank_marketing_data/: banking_data.py
examples/census/: census.py
examples/chicago_employees/: chicago_employees.py
examples/colors/: colors.py
examples/features/: correlation_auto_example.py  correlation_demo.py  eda_dataset_compare.py  images_cats_and_dogs.py  images_exif.py  mask_sensitive.py  russian_vocabulary.py  spark_example.py  theme_flatly_demo.py  theme_united_demo.py  urls.py
examples/hcc/: eda-with-feature-comparison.ipynb  eda-with-feature-comparison.py
examples/integrations/great_expectations/: great_expectations_example.py
examples/meteorites/: meteorites.ipynb  meteorites.py  meteorites_cloud.ipynb
examples/musical_instrument_reviews/: review.py
examples/nza/: nza.py
examples/rdw/: rdw.py
examples/stata_auto/: stata_auto.py
examples/titanic/: titanic.ipynb  titanic.py  titanic_cloud.ipynb
examples/usaairquality/: usaairquality.ipynb  usaairquality.py
examples/vektis/: vektis.py
site/: index.html
src/data_profiling/: __init__.py  compare_reports.py  config.py  expectations_report.py  profile_report.py
src/data_profiling/controller/: console.py  polars_decorator.py
src/data_profiling/model/: alerts.py  correlations.py  dataframe.py  describe.py  handler.py  missing.py  pairwise.py  summarizer.py  summary.py  summary_algorithms.py  typeset.py
src/data_profiling/model/polars/: __init__.py  correlations_polars.py  dataframe_polars.py  describe_boolean_polars.py  describe_categorical_polars.py  describe_counts_polars.py  describe_date_polars.py  describe_numeric_polars.py  describe_text_polars.py  duplicates_polars.py  missing_polars.py  sample_polars.py  summary_polars.py  table_polars.py  text_helpers.py  utils_polars.py
src/data_profiling/report/: formatters.py
src/data_profiling/report/presentation/: frequency_table_utils.py
src/data_profiling/report/presentation/core/: correlation_table.py  duplicate.py  sample.py
src/data_profiling/report/presentation/flavours/html/: duplicate.py  frame.py  sample.py
src/data_profiling/report/structure/: report.py
src/data_profiling/report/structure/variables/: render_categorical.py  render_image.py
src/data_profiling/utils/: common.py  dataframe.py  logger.py  varseries.py
src/data_profiling/visualisation/: missing.py  plot.py
src/polars_profiling/: __init__.py  compare_reports.py  config_default.yaml  config_minimal.yaml  expectations_report.py  profile_report.py  serialize_report.py
src/polars_profiling/controller/: console.py  polars_decorator.py
src/polars_profiling/model/: __init__.py  alerts.py  correlations.py  dataframe.py  describe.py  description.py  duplicates.py  handler.py  missing.py  pairwise.py  sample.py  summarizer.py  summary.py  summary_algorithms.py  table.py  timeseries_index.py  typeset.py
src/polars_profiling/model/polars/: __init__.py  correlations_polars.py  dataframe_polars.py  describe_boolean_polars.py  describe_categorical_polars.py  describe_counts_polars.py  describe_date_polars.py  describe_numeric_polars.py  describe_text_polars.py  duplicates_polars.py  missing_polars.py  sample_polars.py  summary_polars.py  table_polars.py  text_helpers.py  utils_polars.py
src/polars_profiling/report/: __init__.py  utils.py
src/polars_profiling/report/presentation/core/: __init__.py  alerts.py  collapse.py  container.py  correlation_table.py  dropdown.py  duplicate.py  frequency_table.py  frequency_table_small.py  html.py  image.py  item_renderer.py  root.py  sample.py  scores.py  table.py  toggle_button.py  variable.py  variable_info.py
src/polars_profiling/report/presentation/flavours/: __init__.py  flavour_html.py  flavour_widget.py  flavours.py
src/polars_profiling/report/presentation/flavours/html/: __init__.py  alerts.py  collapse.py  container.py  correlation_table.py  dropdown.py  duplicate.py  frequency_table.py  frequency_table_small.py  html.py  image.py  root.py  sample.py  scores.py  table.py  templates.py  toggle_button.py  variable.py  variable_info.py
src/polars_profiling/report/presentation/flavours/html/templates/: report.html
src/polars_profiling/report/presentation/flavours/html/templates/alerts/: alert_type_date.html
src/polars_profiling/report/presentation/flavours/widget/: __init__.py  alerts.py  collapse.py  container.py  correlation_table.py  dropdown.py  duplicate.py  frequency_table.py  frequency_table_small.py  html.py  image.py  notebook.py  root.py  sample.py  table.py  toggle_button.py  variable.py  variable_info.py
src/polars_profiling/report/structure/: correlations.py  overview.py  report.py
src/polars_profiling/report/structure/variables/: __init__.py  render_boolean.py  render_categorical.py  render_common.py  render_complex.py  render_count.py  render_date.py  render_file.py  render_generic.py  render_image.py  render_path.py  render_real.py  render_text.py  render_timeseries.py  render_url.py
src/polars_profiling/utils/: cache.py  common.py  logger.py
src/polars_profiling/visualisation/: context.py  missing.py  plot.py  utils.py
tests/: conftest.py
tests/unit/: test_describe.py  test_features.py  test_report.py  test_typeset.py
