[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=72.0.0,<81.0.0",
    "setuptools-scm>=8.0.0,<9.0.0",
    "wheel>=0.38.4,<1.0.0"
]

[packaging]
package_name = "polars-profiling"

[project]
name = "polars-profiling"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "YData Labs Inc", email = "opensource@ydata.ai"}
]
description = "Generate a profile report for a Polars DataFrame"
keywords = ["polars", "data-science", "data-analysis", "python", "jupyter", "ipython"]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Healthcare Industry",
    "Topic :: Scientific/Engineering",
    "Framework :: IPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    # Core dataframe engine (Polars only)
    "polars>=1.0, <2",
    "scipy>=1.8, <1.17",
    "matplotlib>=3.5, <=3.10",
    "pydantic>=2, <3",
    "PyYAML>=6.0.3, <6.1",
    "jinja2>=3.1.6, <3.2",
    "numpy>=1.22,<2.4",
    # Related to HTML report
    "minify-html>=0.15.0",
    "filetype>=1.0.0",
    # Examples / file IO
    "requests>=2.32.0, <3",
    # Progress bar
    "tqdm>=4.66.3, <5",
    # Multiple dispatch for the backend
    "multimethod>=1.4, <2",
    # type checking
    "typeguard>=4, <5",
    "imagehash==4.3.2",
    "wordcloud>=1.9.4",
    "dacite>=1.9, <2",
]

dynamic = [
    "version",
]

[project.optional-dependencies]
dev = [
    "black>=20.8b1",
    "isort>=5.0.7",
    "pre-commit>=2.8.2",
    "virtualenv>=20.0.33",
    "twine",
    "wheel",
    "myst-parser>=0.18.1",
    "sphinx_rtd_theme>=0.4.3",
    "sphinx-autodoc-typehints>=1.10.3",
    "sphinx-multiversion>=0.2.3",
    "autodoc_pydantic",
    "standard-imghdr"
]

docs = [
    "mkdocs>=1.6.0,<1.7.0",
    "mkdocs-material>=9.0.12,<10.0.0",
    "mkdocs-material-extensions>=1.1.1,<2.0.0",
    "mkdocs-table-reader-plugin<=2.2.0",
    "mike>=2.1.1,<2.2.0",
    "mkdocstrings[python]>=0.20.0,<1.0.0",
    "mkdocs-badges",
]

notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=7.5.1",
]

test = [
    "pytest",
    "coverage>=6.5, <8",
    "codecov",
    "pytest-cov",
    "nbval",
    "pyarrow",
    "twine>=3.1.1",
    "kaggle",
]

unicode= [
    "tangled-up-in-unicode==0.2.0",
]

[project.urls]
Homepage = "https://ydata.ai"
Repository = "https://github.com/Data-Centric-AI-Community/fg-data-profiling"

[project.scripts]
data_profiling = "data_profiling.controller.console:main"

# setuptools relative

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
data_profiling = ["py.typed"]

[tool.distutils.bdist_wheel]
universal = true

[tool.setuptools.package-dir]
"" = "src"
